Added a note that #nav-bar width differs from homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
     text-decoration: none;
     justify-content: space-around;
     align-items: flex-end;
+    /*Changed nav-bar width to fit width of screen*/
     width: 1306px;
     position: relative;
 }
