--- a/recipe-style.css
+++ b/recipe-style.css
@@ -69,21 +69,8 @@ p {
     width: 100%;
 }
 
-iframe {
-    width: 96%;
-    height: 400px;
-    margin: 20px 20px;
-}
-
-.vid-bg {
-    background-color: var(--main-color);
-    width: 100%
-    height: 450px;
-    border-radius: 8px;
-}
-
 .side {
-    width: 25%;
+    width: 26%;
     float: left;
     margin: 20px 0px;
 }
@@ -96,13 +83,30 @@ iframe {
 }
 
 .history-title {
-    padding: 20px;
+    padding: 15px;
 }
 
 #history-card {
     background-color: white;
     height: 200px;
     width: 90%;
-    margin: 10px 20px;
+    margin: 15px 20px;
     border-radius: 6px;
+}
+
+.instructions {
+    margin: 20px 20px;
+}
+
+iframe {
+    width: 96%;
+    height: 400px;
+    margin: 20px 20px;
+}
+
+.vid-bg {
+    background-color: var(--main-color);
+    width: 100%;
+    height: 450px;
+    border-radius: 8px;
 }
