--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,3 +73,23 @@ ul {
   max-width: 200px;
   max-height: 60px;
 }
+
+#recipe-form {
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    padding: 10px 150px ;
+}
+
+.web-title {
+    font-size: 40px;
+    text-align: center;
+}
+.web-subtitle {
+    font-size: 25px;
+    text-align: center;
+}
+
+label, button {
+    font-size: 20px;
+}
