--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,10 @@ nav {
     display: block;
     margin-top: 10px;
     margin-bottom: 10px;
+    border: solid rgb(171, 175, 179);
+    border-radius: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 #submit-button {
