--- a/recipe-style.css
+++ b/recipe-style.css
@@ -5,8 +5,8 @@
 }
 
 :root {
-    --main-color: #b4cfb4;
-    --lighter-color: #ccdccc;
+    --main-color: rgb(150, 188, 117);
+    --lighter-color: rgb(183, 213, 156);
 }
 
 header {
@@ -37,14 +37,20 @@ img {
     margin: 20px 0px 0px 0px;
 }
 
-main {
+.top {
     display: inline;
+    margin-bottom: 20px;
+}
+
+.main {
+    margin-left: 5px;
+    display: block;
 }
 
 .ingredients {
     margin: 20px 20px;
-    width: 70%;
-    float: left;
+    width: 66%;
+    float: right;
 }
 
 .time-block {
@@ -70,15 +76,15 @@ p {
 }
 
 .side {
-    width: 26%;
-    float: left;
-    margin: 20px 0px;
+    width: 28.5%;
+    float: right;
+    margin: 20px 30px 20px 0px;
 }
 
 .history {
     background-color: var(--lighter-color);
     width: 100%;
-    height: 100vh;
+    height: 730px;
     border-radius: 6px;
 }
 
@@ -89,13 +95,14 @@ p {
 #history-card {
     background-color: white;
     height: 200px;
-    width: 90%;
-    margin: 15px 20px;
+    width: 96%;
+    margin: 2% 2%;
     border-radius: 6px;
 }
 
-.instructions {
-    margin: 20px 20px;
+.bottom {
+    margin: 20px 3%;
+    display: block;
 }
 
 iframe {
@@ -109,4 +116,9 @@ iframe {
     width: 100%;
     height: 450px;
     border-radius: 8px;
+}
+
+#instructions {
+    display: block;
+    margin-top: 20px;
 }
