--- a/recipe-style.css
+++ b/recipe-style.css
@@ -34,7 +34,6 @@ a {
 
 img {
     width: 100%;
-    margin: 20px 0px 0px 0px;
 }
 
 .top {
@@ -47,7 +46,7 @@ img {
     display: block;
 }
 
-.ingredients {
+.introduction {
     margin: 20px 20px;
     width: 66%;
     float: right;
@@ -75,30 +74,30 @@ p {
     width: 100%;
 }
 
-.side {
+.ingredients {
     width: 28.5%;
     float: right;
     margin: 20px 30px 20px 0px;
 }
 
-.history {
+/* .ingredients-list {
     background-color: var(--lighter-color);
     width: 100%;
-    height: 730px;
+    height: 800px;
     border-radius: 6px;
-}
+} */
 
-.history-title {
+.ingredient-title {
     padding: 15px;
 }
 
-#history-card {
+/* #history-card {
     background-color: white;
-    height: 200px;
+    height: 27%;
     width: 96%;
-    margin: 2% 2%;
+    margin: 5% 2%;
     border-radius: 6px;
-}
+} */
 
 .bottom {
     margin: 20px 3%;
@@ -121,4 +120,35 @@ iframe {
 #instructions {
     display: block;
     margin-top: 20px;
+}
+
+#ing-list li {
+    margin: 10px 0px;
+    font-size: 20px;
+    background-color: var(--lighter-color);
+    padding: 15px;
+    border-radius: 6px;
+}
+
+#ing-list {
+    width: 80%;
+    border-radius: 6px;
+    padding-left: 5%;
+    list-style-type: none;
+}
+
+#food-name {
+    margin: 20px 20px;
+}
+
+#steps {
+    width: 100%;
+    border-radius: 6px;
+    margin-left: 10px;
+}
+
+#steps li {
+    margin: 10px 0px;
+    font-size: 30px;
+    padding: 15px;
 }
