--- a/recipe-style.css
+++ b/recipe-style.css
@@ -15,6 +15,10 @@ header {
     height: 100px;
 }
 
+body {
+    background-color: beige;
+}
+
 .nav-bar {
     float: right;
     margin: 35px;
@@ -41,13 +45,13 @@ img {
     margin-bottom: 20px;
 }
 
-.main {
+main {
     margin-left: 5px;
     display: block;
 }
 
 .introduction {
-    margin: 20px 20px;
+    margin: 0px 20px 20px 20px;
     width: 66%;
     float: right;
 }
@@ -77,7 +81,7 @@ p {
 .ingredients {
     width: 28.5%;
     float: right;
-    margin: 20px 30px 20px 0px;
+    margin: 0px 30px 20px 0px;
 }
 
 /* .ingredients-list {
@@ -88,7 +92,7 @@ p {
 } */
 
 .ingredient-title {
-    padding: 15px;
+    padding: 0px 15px 15px 15px;
 }
 
 /* #history-card {
@@ -120,6 +124,7 @@ iframe {
 #instructions {
     display: block;
     margin-top: 20px;
+    color: var(--main-color);
 }
 
 #ing-list li {
@@ -139,16 +144,16 @@ iframe {
 
 #food-name {
     margin: 20px 20px;
+    color: var(--main-color);
 }
 
 #steps {
     width: 100%;
     border-radius: 6px;
-    margin-left: 10px;
+    margin-left: 37px;
 }
 
 #steps li {
-    margin: 10px 0px;
-    font-size: 30px;
-    padding: 15px;
+    font-size: 20px;
+    padding: 20px 15px 15px 15px;
 }
