--- a/recipe-style.css
+++ b/recipe-style.css
@@ -76,27 +76,12 @@ p {
 .ingredients {
     width: 28.5%;
     float: right;
-    margin: 0px 30px 20px 0px;
+    margin: 110px 30px 20px 0px;
 }
-
-/* .ingredients-list {
-    background-color: var(--lighter-color);
-    width: 100%;
-    height: 800px;
-    border-radius: 6px;
-} */
 
 .ingredient-title {
     padding: 0px 15px 15px 15px;
 }
-
-/* #history-card {
-    background-color: white;
-    height: 27%;
-    width: 96%;
-    margin: 5% 2%;
-    border-radius: 6px;
-} */
 
 .bottom {
     margin: 20px 3%;
@@ -138,8 +123,9 @@ iframe {
 }
 
 #food-name {
-    margin: 20px 20px;
+    margin: 30px 0px;
     color: var(--main-color);
+    font-size: 50px;
 }
 
 #steps {
@@ -174,4 +160,3 @@ iframe {
     background-color: white;
     font-weight: bold;
 }
-
