--- a/assets/style.css
+++ b/assets/style.css
@@ -16,13 +16,52 @@ body {
 }
 
 .recipe {
-    display: grid;
-    grid-template-columns: 50% 50%;
+    display: flex;
+    flex-direction: row;
     padding: 10px;
     margin: 10px;
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
     min-height: 250px;
+    max-height: 300px;
     background-color: rgb(183, 213, 156);
+}
+
+.recipeLink {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    width: 100%;
+}
+
+.recipeLink div {
+    width: 100%;
+    height: 280px;
+}
+
+.recipeLink p {
+    width: 100%;
+    padding-right: 10px;
+}
+
+.instructionDisplay {
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    padding: 10px;
+    margin: auto;
+    border: none;
+    background-color: rgb(183, 213, 156);
+    width: 25%;
+    box-shadow: 0 3px 15px rgba(0, 0, 0, 0.5);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    text-align: left;
+}
+
+#instructionButton {
+    position: fixed;
+    bottom: 0;
+    left: 26%;
 }
 
 #search-results {
@@ -37,7 +76,6 @@ body {
     align-items: flex-end;
     width: 400px;
     position: relative;
-    /* top: 15px; */
 }
 
 #nav-bar li {
@@ -106,11 +144,13 @@ nav {
 #main-display {
     display: grid;
     grid-template-columns: 65% 35%;
+    min-height: 100vh;
 }
 
 .recipeImage {
     background-repeat: no-repeat;
     background-size: cover;
+    border: solid;
 }
 
 .titleEl {
@@ -124,4 +164,15 @@ nav {
 
 .recipe a:hover {
     color: darkgray;
+}
+
+.contact {
+    display:flex;
+    flex-direction: column;
+    justify-content: end;
+    color: rgb(98, 68, 32);
+}
+
+.idEl {
+    visibility: hidden;
 }
