--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,3 +97,10 @@ label, button {
 #recipe-image {
   margin: 15px;
 }
+
+.contact {
+  display:flex;
+  flex-direction: column;
+  justify-content: end;
+  color: rgb(98, 68, 32);
+}
