--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -191,3 +191,22 @@ nav {
 .hidden {
   display: none;
 }
+
+#vegan-button {
+  margin: 10px 0px;
+  width: 200px;
+  background-color: rgb(150, 188, 117);
+  height: 40px;
+  color: white;
+  border-radius: 6px;
+  border: none;
+  font-weight: bold;
+}
+
+#go-vegan {
+  color: rgb(150, 188, 117);
+}
+
+#vegan-button:hover {
+  background-color: rgb(183, 213, 156);
+}
