--- a/assets/css/recipe-style.css
+++ b/assets/css/recipe-style.css
@@ -11,7 +11,6 @@ header {
     background-color: var(--main-color);
     width: 100%;
     height: 65px;
-    top: 0px;
 }
 
 body {
@@ -23,17 +22,23 @@ body {
     padding: 5px 0px;
 }
 
-.logo {
-    width: auto;
-    height: 90%;
-    margin: 3px 0px;
-}
+#icon {
+    margin-top: 5px;
+    max-width: 200px;
+    max-height: 60px;
+  }
 
 .nav-list {
     display: inline;
     margin: 0px 20px;
     font-size: 16px;
 }
+
+.nav-list a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+  }
 
 img {
     width: 100%;
